wip(quality): clear spotbugs dead-file blockers